--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "express": "^4.17.2",
     "lodash": "^4.17.21"
   }
